# fast-api-practice

./: .gitignore  .zshrc  Makefile  README.md  data_model.mmd  db_notes.md  jwt.md  main.py  postgres.alembic.ini  pyproject.toml  security.md  testing_db.dockerfile
auth/: __init__.py  auth_handler.py  auth_payload.py  oauth_provider.py
controller/: __init__.py  auth_controller.py  invoice_controller.py  place_controller.py
dto/: create_place_dto.py
dto/user/: create_user_dto.py  login_dto.py
migrations/: env.py  script.py.mako
migrations/versions/: 0d554d911417_adding_unique_constraints_to_place_.py  2157cb5c3469_connecting_roles_to_users.py  2399106e832f_connecting_roles_to_users_v2.py  3bb503143b16_init.py  6d78f966e08c_adding_roles_and_permissions.py  903cd5116e1a_adding_enable_to_account_role_table.py  9f8bbdb39c54_init.py  a80171aa28f0_creating_database_from_zero.py
models/: __init__.py  account.py  invoice.py  payment_method.py  place.py  product.py  tax.py  taxes.py
models/place/: place.py  place_type.py
models/product/: __init__.py  name.py  product.py  product_type.py  (+1 more)
postgres.migrations/: env.py  script.py.mako
repository/: __init__.py  account_repository.py  account_role_repository.py  place_repository.py  utils.py
service/: __init__.py  place_service.py  user_service.py  utils.py
settings/: __init__.py  database_settings.py
tests/: test_account_role_repository.py  test_database_settings.py  test_permission_repository.py  test_place_service.py  test_role_permission_repository.py  test_role_repository.py  test_security_settings.py
(+20 files in other folders)
