[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
authors = "Yasuo Maidana 😊"
readme = "README.md"

dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]
