[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
authors = "Yasuo Maidana 😊"
readme = "README.md"

dependencies = [
    "alembic-postgresql-enum>=1.7.0",
    "alembic>=1.15.1",
    "bcrypt>=4.3.0",
    "coverage>=7.7.0",
    "fastapi[standard]>=0.115.11",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]
